--- a/index.html
+++ b/index.html
@@ -275,5 +275,7 @@
         setupHoverPlay("sahara-video");
         setupHoverPlay("rocky-mountains-video");
     </script>
+    <a href="impressum.html">Impressum</a>
+
 </body>
 </html>
