--- a/impressum.html
+++ b/impressum.html
@@ -38,16 +38,16 @@
         Edwin Gerlach</p>
 
         <p><strong>Kontakt:</strong><br>
-        Telefon: +49 123 456789<br>
-        E-Mail: info@reiseabenteuer.de</p>
+        Telefon: +41 78 421 81 13<br>
+        E-Mail: edwingerlach028@gmail.com</p>
 
         <p><strong>Registereintrag:</strong><br>
         Eintragung im Handelsregister.<br>
-        Registergericht: Musterstadt<br>
-        Registernummer: HRB 12345</p>
+        Registergericht: Aargau<br>
+        Registernummer: HRB 187420</p>
         
         <p><strong>Umsatzsteuer-ID:</strong><br>
-        Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz: DE123456789</p>
+        Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz: CH123456789</p>
 
         <p><strong>Haftungsausschluss:</strong> Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.</p>
     </section>
