--- a/datenschutz.html
+++ b/datenschutz.html
@@ -65,4 +65,6 @@
 
     <h3>10. Kontakt</h3>
     <p>Wenn Sie Fragen oder Bedenken bezüglich des Datenschutzes haben, können Sie uns unter den oben genannten Kontaktdaten erreichen.</p>
+    <h1> Alle Fotos und Videos wurden ohne copyright lizenz erworben d.h das alle Bilder sind frei nutzerbar. </h1>
 </section>
+
